# wagtail-periodic-review

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  publish.yml  ruff.yml  test.yml
src/wagtail_periodic_review/: apps.py  filters.py  models.py  utils.py  views.py  wagtail_hooks.py  widgets.py
src/wagtail_periodic_review/migrations/: 0001_initial.py
src/wagtail_periodic_review/templates/reports/: periodic_review_report.html  periodic_review_report_results.html
src/wagtail_periodic_review/templates/wagtailadmin/periodic_review/: home_panel.html
tests/: manage.py  models.py  settings.py  test_utils.py  test_views.py  urls.py  wsgi.py
tests/migrations/: 0001_initial.py
tests/testapp/: models.py
tests/testapp/migrations/: 0001_initial.py
wagtail_periodic_review/: apps.py  filters.py  models.py  utils.py  views.py  wagtail_hooks.py  widgets.py
wagtail_periodic_review/migrations/: 0001_initial.py
wagtail_periodic_review/templates/reports/includes/: list_with_review_dates.html
