[project]
name = "wagtail-periodic-review"
description = "A Wagtail package for periodic page content reviews"
authors = [{name = "Andy Babic ", email = "andy.babic@torchbox.com"}]
maintainers = [{name = "Dan Braghis", email="dan.braghis@torchbox.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wagtail", "Django", "content", "review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 4",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "Wagtail>=4.1",
    "python-dateutil>=2.8,<3.0.0"
]

[project.urls]
Source = "https://github.com/zerolab/wagtail-periodic-review/blob/main/CHANGELOG.md"
Changelog = "https://github.com/zerolab/wagtail-periodic-review/blob/main/CHANGELOG.md"


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "wagtail_periodic_review"

[tool.flit.sdist]
exclude = [
    "tests",
    "Makefile",
    "docs",
    ".*",
    "*.json",
    "*.ini",
    "*.yml",
    "manage.py",
]

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"
known_first_party = ['periodic_review', 'tests']
skip = ["migrations", ".git", "__pycache__", "LC_MESSAGES", "locale", "build", "dist", ".github", ".tox", "venv", ".venv", ".coverage"]
blocked_extensions = ["pyc", "md", "html", "txt", "css", "sh"]
lines_between_types = 1
lines_after_imports = 2


[tool.coverage.run]
branch = true
parallel = true
source_pkgs = ["wagtail_periodic_review"]

omit = ["**/migrations/*", "tests/*"]

[tool.coverage.paths]
source = ["src", ".tox/py*/**/site-packages"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
skip_covered = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Nor complain about type checking
    "if TYPE_CHECKING:",
]
