[project]
name = "wagtail-periodic-review"
description = "A Wagtail package for periodic page content reviews"
authors = [{name = "Andy Babic ", email = "andy.babic@torchbox.com"}]
maintainers = [{name = "Dan Braghis", email="dan.braghis@torchbox.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wagtail", "Django", "content", "review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 5",
    "Framework :: Wagtail :: 6",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "Wagtail>=5.2",
    "python-dateutil>=2.8,<3.0.0"
]

[project.urls]
Source = "https://github.com/zerolab/wagtail-periodic-review/blob/main/CHANGELOG.md"
Changelog = "https://github.com/zerolab/wagtail-periodic-review/blob/main/CHANGELOG.md"


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "wagtail_periodic_review"

[tool.flit.sdist]
exclude = [
    "tests",
    "Makefile",
    "docs",
    ".*",
    "*.json",
    "*.ini",
    "*.yml",
    "manage.py",
]

[tool.black]
target-version = ['py38']

[tool.ruff]
target-version = "py38"

select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "PGH", # pygrep-hooks
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "W",   # pycodestyle warnings
    "YTT",   # flake8-2020
    "UP",  # pyupgrade
    "RUF100",  # unused noqa
]

ignore = ["E501"]
fixable = ["C4", "E", "F", "I", "UP"]

[tool.ruff.isort]
known-first-party = ["src", "wagtail_periodic_review"]
lines-between-types = 1
lines-after-imports = 2


[tool.coverage.run]
branch = true
concurrency = ["multiprocessing", "thread"]
parallel = true
source_pkgs = ["wagtail_periodic_review"]

omit = ["**/migrations/*", "tests/*"]

[tool.coverage.paths]
source = ["src", ".tox/py*/**/site-packages"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
skip_covered = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Nor complain about type checking
    "if TYPE_CHECKING:",
]
